# tokitai-context

./: .cargoignore  .env.example  .gitignore  AI_ASSISTANT.md  Cargo.toml  README.md  USAGE.md  justfile  todo.json
.qwen/: settings.json  settings.json.orig
benches/: file_kv_bench.rs  optimized_merge_bench.rs  parallel_context_bench.rs  profiling_bench.rs  simd_checksum_bench.rs
doc/: ADAPTIVE_PREALLOCATION.md  AI_FEATURES_GUIDE.md  ALIYUN_CODING_PLAN.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  BLOOM_FILTER_MEMORY_OPTIMIZATION.md  BLOOM_FILTER_PERSISTENCE.md  CACHE_WARMING.md  COMPACTION_IMPLEMENTATION.md  COMPLETION_REPORT.md  CONCURRENCY.md  CONSISTENCY_CHECK.md  CONTEXT_STORAGE.md  DOCUMENTATION_SUMMARY.md  DOCUMENT_CLEANUP_SUMMARY.md  DOCUMENT_UPDATE_SUMMARY.md  DOC_INDEX.md  ERROR_HANDLING.md  EXPERIMENT_DESIGN.md  FILEKV_OPTIMIZATION_PLAN.json  FILEKV_OPTIMIZATION_REPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v2.md  IMPROVEMENTS.md  KV_FILE_DESIGN.md  MECHANISMS.md  MIGRATION_GUIDE.md  P0-001_BLOCK_CACHE_OPTIMIZATION.md  P0-002_BLOOM_FILTER_FIX.md  P0-006_FACADE_CONSISTENCY_VERIFIED.md  P0_001_002_CACHE_BLOOM_FIXES.md  P0_006_FACADE_CONSISTENCY_FIX.md  P0_P1_FIXES_SUMMARY.md  P0_P1_FIXES_SUMMARY_v2.md  P1_001_PERFORMANCE_STATUS.md  P1_005_CRASH_RECOVERY_TESTS.md  P1_013_WAL_ROTATION.md  P2-009_INCREMENTAL_CHECKPOINT.md  P2_006_LOCK_FREE_MEMTABLE.md  (+29 more)
doc/archive/: DOCUMENT_UPDATE_2026_04_04.md  OPTIMIZATION_IMPLEMENTATION_REPORT.md  OPTIMIZATION_PLAN_STATUS.md  OPTIMIZATION_SUMMARY.md  P0_COMPLETION_SUMMARY.md  P1_001_PERFORMANCE_FIX.md  P1_010_015_IMPLEMENTATION.md  P1_COMPLETION_SUMMARY.md  P1_PROGRESS_REPORT.md  P2-013_AUDIT_LOGGING.md  P2_COMPLETION_SUMMARY.md  P3_COMPLETION_SUMMARY.md
examples/: ai_conflict_resolution.rs  ai_purpose_inference.rs  ai_workflow.rs  aliyun_coding_plan.rs
scripts/: test.sh
src/: ai_enhanced_manager.rs  ai_resolver.rs  audit_log.rs  auto_tuner.rs  benchmarks.rs  block_cache.rs  bloom_conflict.rs  branch.rs  cache.rs  column_family.rs  compaction.rs  consistency_check.rs  cow.rs  cuckoo_filter.rs  dictionary_compression.rs  distiller.rs  distributed_coordination.rs  error.rs  facade.rs  file_service.rs  fuse_fs.rs  graph.rs  hash_chain.rs  hash_index.rs  hirschberg_lcs.rs  knowledge_index.rs  knowledge_watcher.rs  layers.rs  lib.rs  logger.rs  lru_cache.rs  merge.rs  metrics.rs  metrics_prometheus.rs  mod.rs  optimized_merge.rs  parallel_manager.rs  parallel_merge.rs  path_resolver.rs  pitr.rs  (+14 more)
src/ai/: client.rs  enhanced_manager.rs  mod.rs  purpose.rs  resolver.rs  smart_merge.rs  summarizer.rs
src/ai/clients/: aliyun_coding_plan.rs  anthropic.rs  mod.rs  ollama.rs  openai.rs
src/core/: mod.rs
src/crash_recovery/: fault_injection.rs  integration_tests.rs  mod.rs
src/file_kv/: adaptive_preallocator.rs  async_io.rs  bloom.rs  bloom_filter_cache.rs  bloom_migration.rs  cache_warmer.rs  checkpoints.rs  compaction.rs  config.rs  flush.rs  incremental_checkpoint.rs  incremental_manager.rs  incremental_tests.rs  incremental_types.rs  memtable.rs  mod.rs  recovery.rs  segment.rs  tests.rs  timeout_control.rs  types.rs  wal.rs  write_coalescer.rs
src/mvcc/: mod.rs  snapshot.rs  transaction.rs  version_chain.rs
src/optimization/: mod.rs
src/optimization/algorithms/: lsh.rs  mod.rs
src/optimization/cache/: arc.rs  cuckoo.rs  lru.rs  mod.rs
src/optimization/compression/: dictionary.rs  mod.rs
src/optimization/dedup/: mod.rs
src/parallel/: graph.rs  mod.rs
src/parallel/branch/: mod.rs
src/parallel/manager/: mod.rs
src/parallel/merge/: mod.rs
src/query_optimizer/: cost.rs  executor.rs  mod.rs  optimizer.rs  plan.rs  query.rs  types.rs
tests/: ai_integration_tests.rs  crash_recovery_test.rs  file_kv_integration_test.rs  merge_strategies_test.rs  parallel_context_test.rs  parallel_manager_core_test.rs
