[package]
name = "tokitai-context"
version = "0.1.1"
edition = "2021"
description = "Git-style parallel context management for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silverenternal/tokitai"
keywords = ["ai", "context", "branching", "git", "memory"]
categories = ["development-tools"]

[lib]
name = "tokitai_context"
path = "src/lib.rs"

[features]
default = ["wal"]
# AI 增强功能（冲突解决、目的推断、智能合并推荐）
ai = ["dep:reqwest", "dep:jsonschema", "dep:dotenvy"]
# WAL (Write-Ahead Log) for crash recovery
wal = []
# 性能基准测试
benchmarks = ["dep:criterion"]
# Core only - minimal dependencies for basic storage
core = []
# Distributed coordination with etcd
distributed = ["dep:etcd-client", "dep:tokio-stream"]
# FUSE filesystem interface
fuse = ["dep:fuser", "dep:libc"]
# Prometheus metrics exporter
metrics = ["dep:prometheus", "dep:metrics", "dep:metrics-exporter-prometheus"]
# Full features - all optional features enabled
full = ["ai", "wal", "benchmarks", "distributed", "fuse", "metrics"]

[dependencies]
# Core utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Cryptography
sha2 = "0.10"
hex = "0.4"
crc32c = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base64 = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
memmap2 = "0.9"
tempfile = "3"
notify = "6.1"
walkdir = "2.4"
pathdiff = "0.2"

# Data structures
dashmap = "5"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
lru = "0.12"
bytes = "1.5"
ahash = "0.8"  # P0-001: Fast hasher for BlockCache

# Bloom filter
bloom = "0.3"

# Cuckoo filter (optional, for advanced conflict detection)
cuckoofilter = "0.5"

# Compression
zstd = "0.13"

# Text processing
regex = "1.10"
fst = "0.4"
bk-tree = "0.5"
jieba-rs = "0.7"

# Parallel processing
rayon = "1.10"
rand = "0.8"
num_cpus = "1.16"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# LLM client interface (for AI features)
reqwest = { version = "0.11", features = ["json"], optional = true }

# JSON Schema validation (for AI structured output)
jsonschema = { version = "0.18", optional = true }

# Environment variable loading from .env file
dotenvy = { version = "0.15", optional = true }

# Distributed coordination
etcd-client = { version = "0.14", optional = true }
tokio-stream = { version = "0.1", optional = true }

# FUSE filesystem
fuser = { version = "0.15", optional = true }
libc = { version = "0.2", optional = true }

# Benchmarking (optional)
criterion = { version = "0.5", optional = true }

# Prometheus metrics (optional)
prometheus = { version = "0.13", optional = true }

# Metrics exporter (optional)
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "parallel_context_bench"
path = "benches/parallel_context_bench.rs"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "file_kv_bench"
path = "benches/file_kv_bench.rs"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "profiling_bench"
path = "benches/profiling_bench.rs"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "simd_checksum_bench"
path = "benches/simd_checksum_bench.rs"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "optimized_merge_bench"
path = "benches/optimized_merge_bench.rs"
harness = false
required-features = ["benchmarks"]

[[example]]
name = "ai_conflict_resolution"
path = "examples/ai_conflict_resolution.rs"
required-features = ["ai"]

[[example]]
name = "ai_purpose_inference"
path = "examples/ai_purpose_inference.rs"
required-features = ["ai"]

[[example]]
name = "ai_workflow"
path = "examples/ai_workflow.rs"
required-features = ["ai"]
